fixed layout and made the UI better on mobile

--- a/pmx/styles/Navbar.module.css
+++ b/pmx/styles/Navbar.module.css
@@ -10,7 +10,7 @@
     z-index: 1;
 }
 .normalBackground {
-    background-color: #ffd94f;
+    background-color: #ffc843;
     right: 100%;
     margin-right: 40px;
     top: 80px;
